karma8 discovery: api.servers
